# UI

./: README.md
cwk1_files/: CMakeLists.txt  README.md  dataset.cpp  dataset.hpp  main.cpp  quake.cpp  quake.hpp  test_dataset.cpp  test_quake.cpp
cwk1_files/data/: 2.5_day.csv  4.5_week.csv  README.md  test10.csv
